tests/jastadd/negative/type_errors/L1/4_TypeCheckingWhileStmt.ob
MODULE TestModule;
BEGIN
	WHILE 2 < 3 DO
		WHILE 2 + 3 DO
		END
	END
END TestModule.
